fix: fixed visible double registry

--- a/src/contentscript/overlay/root/components/DropdownRegistry/DropdownRegistry.module.scss
+++ b/src/contentscript/overlay/root/components/DropdownRegistry/DropdownRegistry.module.scss
@@ -21,6 +21,7 @@
 
   background: #ebebeb;
   border-radius: 10px;
+  margin-bottom: 5px;
 }
 
 .activeRegistry {
